--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
                   <label for="exampleInputPassword1">Number of Pages</label>
                   <input type="number" class="form-control" id="inputPages" required>
                 </div>
-                <!-- <div class="form-group">
+                <div class="form-group">
                     <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" id="inputRead" name="inputRead" class="custom-control-input" required>
+                        <input type="radio" id="inputRead" name="customRadio" class="custom-control-input" required>
                         <label class="custom-control-label" for="inputRead">I have read this</label>
                       </div>
                       <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" id="inputNotRead" name="inputNotRead" class="custom-control-input" required>
+                        <input type="radio" id="inputNotRead" name="customRadio" class="custom-control-input" required>
                         <label class="custom-control-label" for="inputNotRead">I have not read this</label>
                     </div>
-                </div> -->
+                </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
