added functionality to 'read' and 'delete buttons and updated styling on cards container

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <div class="container">
         <div id="readingList" class="main bg-white p-2">
             <h1>Reading List</h1>
-            <ul class="readingList mt-2 p-0">
+            <ul class="readingList mt-2 p-0 row">
                 
             </ul>
         </div>
         <div id="completedBooks" class="main bg-white mt-5 p-2">
             <h1>Completed books</h1>
-            <ul class="completedBooks mt-2 p-0">
+            <ul class="completedBooks mt-2 p-0 row">
                 
             </ul>
         </div>
@@ -52,11 +52,11 @@
                 </div>
                 <div class="form-group">
                     <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" id="inputRead" name="customRadio" class="custom-control-input" required>
+                        <input type="radio" id="inputRead" name="customRadio" class="custom-control-input" value="true" required>
                         <label class="custom-control-label" for="inputRead">I have read this</label>
                       </div>
                       <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" id="inputNotRead" name="customRadio" class="custom-control-input" required>
+                        <input type="radio" id="inputNotRead" name="customRadio" class="custom-control-input" value="" required>
                         <label class="custom-control-label" for="inputNotRead">I have not read this</label>
                     </div>
                 </div>
